# simAssimp

./: CMakeLists.txt  README.md  callbacks.xml  install.sh  license.txt  plugin.cpp  plugin.h  simAssimp-ce.lua  simAssimp.lua  simExtAssimp.lua
lua/: simAssimp.lua
